--- a/src/scss/custom/elements/_footer.scss
+++ b/src/scss/custom/elements/_footer.scss
@@ -1,13 +1,13 @@
 #footer{
     .footer-menu{
-        border-left: solid 2px custom-color('dark-blue');
+        border-left: solid 2px brand-color('dark-blue');
     }
     .footer-content{
         width: 50%;
-        border-bottom: solid 2px custom-color('dark-blue');
+        border-bottom: solid 2px brand-color('dark-blue');
         margin-bottom: 2rem;
     }
-    background-image: linear-gradient($black, darken($black, 50));
+    background-image: linear-gradient(darken(brand-color('brand-purple'), 30), darken(brand-color('brand-purple'), 40));
     color: $white;
     a {
         color: $white;
@@ -15,7 +15,7 @@
         &:hover,
         &:active {
             text-decoration: none;
-            border-bottom: 3px solid custom-color('dark-blue');
+            border-bottom: 3px solid brand-color('dark-blue');
         }
     }
 }
