--- a/src/scss/custom/elements/_sidebar.scss
+++ b/src/scss/custom/elements/_sidebar.scss
@@ -10,7 +10,7 @@
         }
         
         &:hover{
-            background-color: lighten(custom-color('light-green'), 40);
+            background-color: lighten(brand-color('light-green'), 40);
         }
     }
 }
