removed unwanted customizers

--- a/style.css
+++ b/style.css
@@ -9,5 +9,4 @@ Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: the-parenting-place-2.0
-Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
-*/
+Tags: custom-background, custom-logo, custom-menu
