styled nav-links

--- a/src/scss/custom/elements/nav/_links.scss
+++ b/src/scss/custom/elements/nav/_links.scss
@@ -20,6 +20,7 @@ nav {
     flex-direction: row;
     justify-content: space-around;
     margin-bottom: 1em;
+    background-color: $white;
     .nav-previous, .nav-next{
         display: flex;
     }
