fixed banner transition

--- a/src/scss/custom/elements/nav/_wrapper.scss
+++ b/src/scss/custom/elements/nav/_wrapper.scss
@@ -40,7 +40,7 @@
      .main-menu-wrapper {
          .navbar {
              transition: background 0.5s linear;
-             background: $black;
+             background: brand-color('light-brown');
              border-bottom: 10px solid brand-color('dark-blue');
          }
 
