--- a/src/scss/custom/elements/_carousel.scss
+++ b/src/scss/custom/elements/_carousel.scss
@@ -10,19 +10,17 @@
     background-clip: border-box;
     border: 1px solid rgba(51, 51, 51, 0.125);
     border-radius: 0.25rem;
-    position: absolute;
     opacity: 0.3;
     padding: 100%;
-    overflow: hidden;
+    position: absolute;
+    top: 0;
     left: 0;
+    z-index: 10;
 }
 
 .carousel-item {
     height: 18em;
-    background-color: lighten($black, 90);
-
     >img {
-        position: absolute;
         top: 0;
         left: 0;
         min-width: 100%;
@@ -45,6 +43,7 @@
         max-width: 300px;
     }
 }
+
 
 @media (min-width: 34em){
     .carousel-item {
