--- a/style.css
+++ b/style.css
@@ -8,5 +8,5 @@ Description: Description
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: the-parenting-place-2.0
+Text Domain: the_parenting_place
 Tags: custom-background, custom-logo, custom-menu
