site title in events

--- a/src/scss/custom/sections/_common.scss
+++ b/src/scss/custom/sections/_common.scss
@@ -9,7 +9,7 @@
         height: 50px;
     }
 
-    p {
+    span {
         max-width: 600px;
         color: #808080;
         font-style: italic;
