--- a/style.css
+++ b/style.css
@@ -8,5 +8,5 @@ Description: Description
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: the_parenting_place
+Text Domain: the_parenting_place_2
 Tags: custom-background, custom-logo, custom-menu
